--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div>
+  <%= flash[:notice] %>
+  </div>
   <h4 class="m-4"><span style="background-color:#eeeeee">会員一覧</span></h4>
 </div>
 
