--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,16 @@
 <h1></h1>
 <h1>さうなびHOME</h1>
+<div onclick="obj=document.getElementById('open').style; obj.display=(obj.display=='none')?'block':'none';">
+<a style="cursor:pointer;">▼ クリックで展開</a>
+</div>
+<!--// 折り畳み展開ポインタ -->
+
+<!-- 折り畳まれ部分 -->
+<div id="open" style="display:none;clear:both;">
+aa
+<!--ここの部分が折りたたまれる＆展開される部分になります。
+自由に記述してください。-->
+
+</div>
+<!--// 折り畳まれ部分 -->
 
