--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,22 @@
                   <% end %>
               </li>
   <% elsif admin_signed_in? %>
-    <li><%= link_to "管理者ログアウト", destroy_admin_session_path, method: :delete %></li>
+               <li>
+                <%= link_to admin_institutions_path, class: "nav-link text-light"  do %> <i class="fas fa-fire"></i>サウナ一覧
+                  <% end %>
+              </li>
+              <li>
+                <%= link_to admin_users_path, class: "nav-link text-light"  do %><i class="fas fa-users"></i>ユーザー一覧
+                  <% end %>
+              </li>
+              <li>
+                <%= link_to admin_reviews_path, class: "nav-link text-light"  do %><i class="fas fa-comments"></i>レビュー一覧
+                  <% end %>
+              </li>
+               <li>
+                <%= link_to destroy_admin_session_path, class: "nav-link text-light", method: :delete do %><i class="fas fa-sign-out-alt"></i>管理者ログアウト
+                  <% end %>
+              </li>
     
   <% else %>
               <li>
