--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,7 +4,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
   
-<h4>新規会員登録</h4>
+<h4><span style="background-color:#eeeeee">新規会員登録</span></h4>
 <table>
   <tr>
 
@@ -53,7 +53,7 @@
 </table>
  
       
-<h4>既に登録済みの方</h4>
+<h4><span style="background-color:#eeeeee">既に登録済みの方</span></h4>
       <p><%= render "public/shared/links" %>からログインしてください。</p>
    
  </div>
