--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row pt-5">
     <div class="col-xl-9 ml-auto">
 <%= form_with model: @user, url: user_path, method: :patch do |f| %>
-<h4>会員情報編集</h4>
+<h4><span style="background-color:#eeeeee">会員情報編集</span></h4>
 <table>
   <tr>
   <td><%= f.label :ニックネーム %></td>
@@ -33,7 +33,7 @@
  <tr>
    <td></td>
    <td><%= f.submit "編集内容保存", class: "btn btn-success ml-5" %>
-   <%= link_to "退会する", users_cancel_path, class: "btn btn-danger ml-5" %></td>
+   <%= link_to "退会する", users_withdraw_path, class: "btn btn-danger ml-5" %></td>
  </tr>
  <% end %>
 </table>
